working list view w/ generic click

--- a/AND110/XamarinUniversitry/XamarinUniversitry.csproj
+++ b/AND110/XamarinUniversitry/XamarinUniversitry.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Instructor.cs" />
+    <Compile Include="InstructorData.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
