--- a/CR_DeckAnalysis/CR_DeckAnalysis/CR_DeckAnalysis.csproj
+++ b/CR_DeckAnalysis/CR_DeckAnalysis/CR_DeckAnalysis.csproj
@@ -92,10 +92,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CardReport.cs" />
-    <Compile Include="JSON_IO.cs" />
-    <Compile Include="SeasonSummary.cs" />
-    <Compile Include="TestProtocol.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -104,9 +100,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Cards.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Enums.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -380,6 +373,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <Import Project="..\ClashResources\ClashResources.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
