--- a/CR_DeckAnalysis/CR_DeckAnalysis/CR_DeckAnalysis.csproj
+++ b/CR_DeckAnalysis/CR_DeckAnalysis/CR_DeckAnalysis.csproj
@@ -374,6 +374,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="..\ClashResources\ClashResources.projitems" Label="Shared" />
+  <Import Project="..\WebCrawl\WebCrawl.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
